--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "@types/react-dom": "^18.2.7",
     "axios": "^1.4.0",
     "chakra-react-select": "^4.7.0",
-    "env-cmd": "^10.1.0",
     "firebase": "^9.23.0",
     "lowlight": "^2.9.0",
     "moment": "^2.29.4",
@@ -42,10 +41,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "env-cmd -f .env react-scripts start",
-    "build": "env-cmd -f .env react-scripts build",
-    "test": "env-cmd -f .env react-scripts test",
-    "eject": "env-cmd -f .env react-scripts eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
