update community page + layout

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "1C:Forum",
+  "name": "Forum project developed by 1C Innovation",
   "icons": [
     {
       "src": "favicon.ico",
